fix sidebar text-overflow to no wrap and show ellipsis

--- a/themes/hugo-theme-clarity-learn/static/css/theme.css
+++ b/themes/hugo-theme-clarity-learn/static/css/theme.css
@@ -205,6 +205,9 @@ th {
 }
 #sidebar ul li > a {
   padding: 4px 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 #sidebar ul li.visited > a .read-icon {
   display: inline;
